--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypher-loader",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Webpack loader for cypher query files.",
   "main": "loader.js",
   "files": [
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/yomguithereal/cypher-loader#readme",
   "dependencies": {
-    "decypher": "^0.11.0"
+    "decypher": "^0.x.x"
   },
   "devDependencies": {
     "webpack": "^1.12.12"
